# Zappy

./: .gitignore  Makefile  README.md  backlog.md
.github/workflows/: build-and-test-ai.yml  build-and-test-gui.yml  build-and-test-server.yml  build-and-test.yml
ai/: .gitignore  ai.py  main.py  outils.py
gui/: CMakeLists.txt
gui/include/: AModel.hpp  BaseModel.hpp  BigIsland.hpp  Camera.hpp  Deraumere.hpp  Egg.hpp  Food.hpp  Game.hpp  Grass.hpp  Gui.hpp  IModel.hpp  Island.hpp  Linemate.hpp  Map.hpp  MediumIsland.hpp  Mendiane.hpp  Orientation.hpp  Parser.hpp  Phiras.hpp  Player.hpp  RaylibWrapper.hpp  Sibur.hpp  SmallIsland.hpp  Socket.hpp  Team.hpp  Thystame.hpp  Window.hpp
gui/include/Camera/: Camera.hpp
gui/include/Collectables/: Deraumere.hpp  Egg.hpp  Food.hpp  Linemate.hpp  Mendiane.hpp  Phiras.hpp  Sibur.hpp  Thystame.hpp
gui/include/Commands/: Commands.hpp
gui/include/Game/: Game.hpp
gui/include/Island/: BigIsland.hpp  MediumIsland.hpp  SmallIsland.hpp
gui/include/Models/: AModel.hpp  Grass.hpp  IModel.hpp  Island.hpp  Player.hpp
gui/include/Models/Collectables/: Deraumere.hpp  Egg.hpp  Food.hpp  Linemate.hpp  Mendiane.hpp  Phiras.hpp  Sibur.hpp  Thystame.hpp
gui/include/Parser/: IParser.hpp  ParseArguments.hpp  ParseCommands.hpp
gui/resources/: CREDITS.md  deraumere.glb  phiras.glb  sibur.glb
gui/ressources/: CREDITS.md  egg.glb  mendiane.glb  player.glb
gui/src/: AModel.cpp  BaseModel.cpp  BigIsland.cpp  Camera.cpp  Deraumere.cpp  Egg.cpp  Food.cpp  Game.cpp  Grass.cpp  Help.cpp  Island.cpp  Linemate.cpp  Main.cpp  Map.cpp  MediumIsland.cpp  Mendiane.cpp  Parser.cpp  Phiras.cpp  Player.cpp  Sibur.cpp  SmallIsland.cpp  Socket.cpp  Team.cpp  Thystame.cpp  Window.cpp  help.cpp  main.cpp
gui/src/Camera/: Camera.cpp
gui/src/Collectables/: Deraumere.cpp  Egg.cpp  Food.cpp  Linemate.cpp  Mendiane.cpp  Phiras.cpp  Sibur.cpp  Thystame.cpp
gui/src/Commands/: Commands.cpp
gui/src/Game/: Game.cpp
gui/src/Island/: BigIsland.cpp  MediumIsland.cpp  SmallIsland.cpp
gui/src/Models/: AModel.cpp  Grass.cpp  Island.cpp  Player.cpp
gui/src/Models/Collectables/: Deraumere.cpp  Egg.cpp  Food.cpp  Linemate.cpp  Mendiane.cpp  Phiras.cpp  Sibur.cpp  Thystame.cpp
gui/src/Parser/: ParseArguments.cpp  ParseCommands.cpp
server/: CMakeLists.txt
server/include/: egg.h  main.h  player.h  server.h  tile.h
server/src/: add_egg.c  basic_functions.c  command_queue.c  connections.c  coordinates.c  destroy.c  display_tile.c  game_end.c  generate_resources.c  handle_command.c  help.c  init_listener.c  init_resource_pointers.c  init_resources.c  listener.c  main.c  manage_client.c  manage_food.c  manage_team.c  parse_args.c  remove_egg.c  server_init.c  spread_resources.c  ticks.c
server/src/commands/: broadcast.c  eject.c  fork.c  incantation.c  inventory.c  look.c  move.c  object_interaction.c  rotate.c  team_slots.c
server/src/game_loop/: game_end.c  game_loop.c
server/src/graphic_commands/: bct.c  ebo.c  edi.c  enw.c  mct.c  msz.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  plv.c  pnw.c  ppo.c  sbp.c  seg.c  sgt.c  smg.c  sst.c  suc.c  tna.c
server/src/player_commands/: broadcast.c  eject.c  fork.c  incantation.c  inventory.c  look.c  look_buffer_len.c  move.c  object_interaction.c  rotate.c  set_object.c  success_response.c  take_object.c  team_slots.c
